--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title></title>
     <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow">
+    <meta http-equiv="Content-Security-Policy" 
+          content="default-src 'self'; script-src 'self'">
   </head>
   <body>
 
