--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="googlebot" content="noindex, nofollow">
     <meta http-equiv="Content-Security-Policy" 
-          content="default-src 'self'; script-src 'self'">
+    content="default-src 'self' 
+             https://cdn.jsdelivr.net 
+             https://unpkg.com 
+             https://cdnjs.cloudflare.com">
   </head>
   <body>
 
